<resources>
    <string name="app_name" translatable="false">MyStuff</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="menuExcluir">Excluir</string>
    <string name="inventariosTitulo">Seus Inventários</string>
    <string name="msgInventarioNenhum">Nenhum Inventário!\nClique no botão \"+\" abaixo para criar um.</string>
    <string name="fabInventarios">Criar um Inventário</string>
    <string name="inventarioDetalhesTituloAppBar">Detalhes do Inventário</string>
    <string name="inventarioDetalhesTabLocais">Locais</string>
    <string name="inventarioDetalhesTabCategorias">Categorias</string>
    <string name="inventarioDetalhesTabItens">Itens</string>
    <string name="inventarioDetalhesOpcoes">Opções do Item</string>
    <string name="dialogoInventarioNovoTitulo">Novo Inventário</string>
    <string name="msgLocalNenhum">Nenhum Local!\nClique no botão \"+\" abaixo para criar um.</string>
    <string name="msgNenhumCategoria">Nenhuma Categoria!\nClique no botão \"+\" abaixo para criar uma.</string>
    <string name="msgItemNenhumOutro">Você precisa criar ao menos um local e uma categoria antes de criar um item.</string>
    <string name="msgItemNenhum">Nenhum Item!\nClique no botão \"+\" abaixo para criar um.</string>
    <string name="dialogoLocalNovoTitulo">Novo Local</string>
    <string name="toastNaoImplementado">Não Implementado</string>
    <string name="menuEditar">Editar</string>
    <string name="confirmarExclusao">Confirmar exclusão?</string>
    <string name="dialogoInventarioEditarTitulo">Editar Inventário</string>
    <string name="dialogoLocalEditarTitulo">Editar Local</string>
    <string name="msgExclusaoInventario">Excluir este Inventário excluirá todos os dados associados a ele (Locais, Itens e Categorias). Prosseguir?</string>
    <string name="msgExclusaoLocal">Excluir este Local apagará as associações dos respectivos Itens com ele. Os Itens não serão excluídos, mas você terá que associá-los com novos Locais, se desejar. Prosseguir?</string>
    <string name="msgExclusaoCategoria">Excluir esta categoria excluirá as associações entre ela e os respectivos itens. Os itens não serão excluídos. Prosseguir?</string>
    <string name="dialogoCategoriaEditarTitulo">Editar Categoria</string>
    <string name="dialogoCategoriaNovaTitulo">Nova Categoria</string>
    <string name="dialogoitemNovoTitulo">Novo Item</string>
    <string name="dialogoItemEditarTitulo">Editar Item</string>
    <string name="dialogoItemEtiquetaLocal">Local</string>
    <string name="dialogoItemEtiquetaCategorias">Categoria(s)</string>
    <string name="dialogoItemEscolher">Escolher</string>
    <string name="dialogoItemModificar">Modificar</string>
    <string name="msgExclusaoItem">Este processo não pode ser revertido. Prosseguir?</string>
    <string name="dialogoItemAumentarQuantidade">Aumentar quantidade do Item</string>
    <string name="dialogoItemDiminuirQuantidade">Diminuir quantidade do Item</string>
    <string name="dialogoDicaNome">Nome</string>
    <string name="dialogoDicaQuantidade">Quantidade</string>
    <string name="dialogoItemQuantidadePlaceholder" translatable="false">%1$d</string>
    <string name="dialogoListaLocaisTitulo">Escolha um Local</string>
    <string name="dialogoListaCategoriaTitulo">Escolha uma ou mais Categorias</string>
    <string name="msgItemNenhumOutroSnack">Antes crie ao menos um Local e uma Categoria.</string>
    <string name="inventarioDetalhesItensX" translatable="false"> x </string>
    <string name="msgNaoSalvoInventario">Inventário não salvo. Forneça um nome.</string>
    <string name="msgNaoSalvoLocal">Local não salvo. Forneça um nome.</string>
    <string name="msgNaoSalvoCategoria">Categoria não salva. Forneça um nome.</string>
    <string name="msgNaoAtualizadoInventario">Inventário não renomeado. Forneça um nome.</string>
    <string name="msgNaoAtualizadoCategoria">Categoria não renomeada. Forneça um nome.</string>
    <string name="msgNaoAtualizadoItem">Item não modificado. Forneça um nome e quantidade.</string>
    <string name="msgNaoAtualizadoLocal">Local não renomeado. Forneça um nome.</string>
    <string name="msgDialogoNomeVazio">Não pode estar em branco</string>
    <string name="msgDialogoQuantidadeVaziaOuZero">Deve ser 1 ou mais</string>
    <string name="msgNaoSalvoItem">Item não salvo. Forneça um nome e quantidade.</string>
    <string name="msgNaoSalvoItemOutros">Item não salvo. Forneça ao menos um Local e uma Categoria.</string>
</resources>