<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtiNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/dialogoDicaNome"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_round_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txteNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textShortMessage|textMultiLine"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CamposContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtiNome"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/btnDiminuirQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/dialogoItemDiminuirQuantidade"
            app:layout_constraintBottom_toBottomOf="@+id/txtiQuantidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtiQuantidade"
            app:srcCompat="@drawable/ic_round_remove_24"
            app:tint="@color/preto50" />

        <ImageButton
            android:id="@+id/btnAumentarQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/dialogoItemAumentarQuantidade"
            android:tint="@color/preto50"
            app:layout_constraintBottom_toBottomOf="@+id/txtiQuantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtiQuantidade"
            app:srcCompat="@drawable/ic_round_add_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtiQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/dialogoDicaQuantidade"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/btnAumentarQuantidade"
            app:layout_constraintStart_toEndOf="@+id/btnDiminuirQuantidade"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_round_quantidade">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txteQuantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtvEtiquetaLocal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_round_local"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/dialogoItemEtiquetaLocal"
            android:textSize="16sp"
            app:drawableTint="@color/preto50"
            app:layout_constraintBottom_toBottomOf="@+id/btnEscolherLocal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnEscolherLocal"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnEscolherLocal"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogoItemEscolher"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtiQuantidade" />

        <ImageButton
            android:id="@+id/btnRemoverLocalSelecionado"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:tint="@color/vermelhoPrimario"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btnEscolherLocal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnEscolherLocal"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_round_delete_24" />

        <TextView
            android:id="@+id/txtvEtiquetaCategorias"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:drawableStart="@drawable/ic_round_tag"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/dialogoItemEtiquetaCategorias"
            android:textSize="16sp"
            app:drawableTint="@color/preto50"
            app:layout_constraintBottom_toBottomOf="@+id/btnEscolherCategorias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnEscolherCategorias" />

        <Button
            android:id="@+id/btnEscolherCategorias"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialogoItemEscolher"
            android:textColor="@color/secondaryTextColor"
            app:backgroundTint="@color/cinzaEscuroAzulado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEscolherLocal" />

        <ImageButton
            android:id="@+id/btnRemoverCategoriasSelecionadas"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:tint="@color/vermelhoPrimario"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btnEscolherCategorias"
            app:layout_constraintEnd_toStartOf="@+id/btnEscolherCategorias"
            app:layout_constraintTop_toTopOf="@+id/btnEscolherCategorias"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_round_delete_24" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowCategoriasSelecionadas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:flow_horizontalAlign="start"
            app:flow_horizontalBias="-1"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalAlign="top"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtvEtiquetaCategorias" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>